--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 [dependencies]
 # --- Networking / Async ---
-axum = "0.7"
 tokio = { version = "1", features = ["full"] }
+axum = "0.7"
+rand = "0.8"
+time = "0.3"
 
 # --- Serialization ---
 serde = { version = "1.0", features = ["derive"] }
@@ -16,8 +18,4 @@ bincode = "1.3"
 # --- Crypto / Encoding ---
 sha2 = "0.10"
 hex = "0.4"
-ed25519-dalek = "2"
-
-# --- Time / Randomness ---
-time = "0.3"
-rand = "0.8"
+secp256k1 = { version = "0.28", features = ["rand"] }
