--- a/fly.toml
+++ b/fly.toml
@@ -1,26 +1,31 @@
-# fly.toml app configuration file generated for bitcoin-0-2-1t4c3g on 2026-01-27T17:19:11Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
+app = "bitcoin-0-2-1t4c3g"
+primary_region = "iad"
 
-app = 'bitcoin-0-2-1t4c3g'
-primary_region = 'iad'
+kill_signal = "SIGINT"
+kill_timeout = 5
 
-[build]
+[experimental]
+  auto_rollback = true
 
-[env]
-  PORT = '8080'
+# ───────── TCP P2P SERVICE ─────────
+[[services]]
+  protocol = "tcp"
+  internal_port = 8333
 
-[http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+  [[services.ports]]
+    port = 8333
 
-[[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
+  [services.concurrency]
+    type = "connections"
+    soft_limit = 50
+    hard_limit = 100
+
+# ───────── DEPLOYMENT ─────────
+[deploy]
+  strategy = "immediate"
+
+# ───────── VM ─────────
+[vm]
+  cpu_kind = "shared"
   cpus = 1
-  memory_mb = 1024
+  memory_mb = 512
