--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,6 @@ bip39 = "2.0"
 btleplug = "0.11"
 uuid = "1.7"
 futures = "0.3"
+
+# --- Android ---
+jni = { version = "0.19", default-features = false }
