--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ uuid = "1.7"
 futures = "0.3"
 
 # --- Android ---
-jni = { version = "0.21", default-features = false }
+jni = { git = "https://github.com/jni-rs/jni-rs", tag = "v0.21.1" }
+
 
 
