--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,9 +34,6 @@ uuid = "1.7"
 futures = "0.3"
 
 # --- Android ---
-jni = { version = "0.21.1", default-features = false }
-
-
-
-
+[patch.crates-io]
+jni = { git = "https://github.com/jni-rs/jni-rs",tag = "v0.19.0", package = "jni" }
 
