--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,12 +28,11 @@ num-bigint = "0.4"
 num-traits = "0.2"
 bip39 = "2.0"
 
-# --- Bluetooth (BLE) ---
-btleplug = "0.11"
-uuid = "1.7"
-futures = "0.3"
+# --- Utilities ---
+uuid = "1.7"      # harmless, pure Rust
+futures = "0.3"   # async helpers, no JNI
 
-# --- Android ---
-[patch.crates-io]
-jni = { git = "https://github.com/jni-rs/jni-rs",tag = "v0.19.0", package = "jni" }
-
+# --- features ---
+[features]
+bluetooth = []
+default = []
